--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.20",
     "@mastra/core": "latest",
+    "ai": "^4.3.15",
     "mastra": "latest",
-    "zod": "^3.24.3",
-    "@ai-sdk/openai": "^1.3.20"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.16",
     "mastra": "latest",
     "typescript": "^5.8.3"
   }
