--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,13 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "src",
+    "paths": {
+      "~/*": ["*"],
+      "@/*": ["*"],
+      "~": ["."]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", ".mastra"]
