--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-agent",
+  "name": "docseek",
   "version": "1.0.0",
   "main": "index.js",
   "private": true,
@@ -15,13 +15,13 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.20",
     "@mastra/core": "latest",
+    "@mastra/memory": "^0.3.2",
     "ai": "^4.3.15",
     "mastra": "latest",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "^22.15.16",
-    "mastra": "latest",
     "typescript": "^5.8.3"
   }
 }
