--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.20",
     "@mastra/core": "latest",
+    "@mastra/libsql": "^0.0.2",
     "@mastra/memory": "^0.3.2",
     "ai": "^4.3.15",
     "mastra": "latest",
